Initial project setup with README, LICENSE and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,33 @@
 # Virtual environment
 stock_env/
+venv/
+env/
+
+# Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
+*.so
 
 # IDE files
 .vscode/
 .idea/
+*.swp
+*.swo
 
 # OS files
 .DS_Store
 Thumbs.db
 
-# Data files (if you save any)
+# Project specific
 *.csv
 data/
+logs/
+.env
+
+# Distribution / packaging
+build/
+dist/
+*.egg-info/
